--- a/charts/hub-agent/templates/deployment.yaml
+++ b/charts/hub-agent/templates/deployment.yaml
@@ -30,6 +30,11 @@ spec:
             - -add_dir_header
             - --enable-v1alpha1-apis={{ .Values.enableV1Alpha1APIs }}
             - --enable-v1beta1-apis={{ .Values.enableV1Beta1APIs }}
+            - --hub-api-qps={{ .Values.hubAPIQPS }}
+            - --hub-api-burst={{ .Values.hubAPIBurst }}
+            - --concurrent-cluster-placement-syncs={{ .Values.concurrentClusterPlacementSyncs }}
+            - --concurrent-member-cluster-syncs={{ .Values.concurrentMemberClusterSyncs }}
+            - --concurrent-cluster-syncs={{ .Values.concurrentClusterSyncs }}
           ports:
             - name: metrics
               containerPort: 8080
