--- a/charts/hub-agent/values.yaml
+++ b/charts/hub-agent/values.yaml
@@ -39,4 +39,4 @@ hubAPIQPS: 20
 hubAPIBurst: 100
 concurrentClusterPlacementSyncs: 1
 concurrentMemberClusterSyncs: 1
-concurrentClusterSyncs: 20
+ConcurrentResourceChangeSyncs: 20
