--- a/test/e2e/kindconfigs/cluster-1.yaml
+++ b/test/e2e/kindconfigs/cluster-1.yaml
@@ -1,3 +1,7 @@
+# Important: due to kind limitations
+# (kind node always has resource capacity == host resource capacity) and our planned test
+# cases (resource and non-resource properties), modification of this setup might lead to
+# significant test failures.
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
 nodes:
