--- a/examples/hack/deploy.1.yaml
+++ b/examples/hack/deploy.1.yaml
@@ -1,12 +1,15 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app
+  name: app-2
+  namespace: work
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: nginx
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
