--- a/examples/hack/deploy.yaml
+++ b/examples/hack/deploy.yaml
@@ -2,17 +2,20 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: app
+  namespace: work
 spec:
   selector:
     matchLabels:
       app: nginx
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
         app: nginx
     spec:
       containers:
-        - name: nginx
-          image: nginx
-          ports:
-            - containerPort: 80
+      - name: nginx
+        image: abc.xyz/lmn:latest
+        ports:
+          - containerPort: 80
