--- a/examples/nginx/place-all-crp.yaml
+++ b/examples/nginx/place-all-crp.yaml
@@ -1,18 +1,18 @@
 apiVersion: placement.kubernetes-fleet.io/v1beta1
 kind: ClusterResourcePlacement
 metadata:
-  name: afd-crp
+  name: work
 spec:
   resourceSelectors:
     - group: ""
       kind: Namespace
-      name: test-afd
       version: v1
+      labelSelector:
+        matchLabels:
+          app: work
   policy:
     placementType: PickAll
   strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 2 
-      maxSurge: 25%
-      unavailablePeriodSeconds: 60
+    applyStrategy:
+      whenToApply: IfNotDrifted
+      whenToTakeOver: IfNoDiff
