--- a/examples/test-cro1.yaml
+++ b/examples/test-cro1.yaml
@@ -1,21 +1,24 @@
 apiVersion: placement.kubernetes-fleet.io/v1alpha1
 kind: ClusterResourceOverride
 metadata:
-  name: cro-1
+  name: policy-1
 spec:
   clusterResourceSelectors:
-    - group: apiextensions.k8s.io
-      kind: CustomResourceDefinition
-      name: testresources.test.kubernetes-fleet.io
+    - group: ""
+      kind: Namespace
       version: v1
+      name: work
   policy:
     overrideRules:
       - clusterSelector:
           clusterSelectorTerms:
             - labelSelector:
                 matchLabels:
-                  env: canary
+                  env: prod
         jsonPatchOverrides:
           - op: add
-            path: /metadata/labels/new-label
-            value: "new-value"
+            path: /metadata/labels/placed-by
+            value: "fleet"
+          - op: add
+            path: /metadata/labels/owned-by
+            value: "team-red"
